--- a/src/facebook/facebook.css
+++ b/src/facebook/facebook.css
@@ -1,4 +1,4 @@
-.homeSquare {
+.homeSquare-light {
     width: 100px;
     height: 50px;
     font-size: 20px;
@@ -9,14 +9,31 @@
     text-align: center;
 }
 
+.homeSquare-dark {
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+    background-color: #242527;
+    box-shadow: 0px 0px 5px #888888;
+    padding: 20px;
+    margin: 20px;
+    text-align: center;
+    color: 'white !important'
+}
+
 .flex-container {
     display: flex;
 }
 
-.homeSquare:hover {
+.homeSquare-light:hover {
     background-color: rgb(221, 221, 221);
     /*box-shadow: -3px 3px 3px #888888;*/
   }
+
+.homeSquare-dark:hover {
+    background-color: rgb(109, 109, 109);
+    /*box-shadow: -3px 3px 3px #888888;*/
+    }   
 
 .myContainer {
     width: 540px;
@@ -28,4 +45,5 @@
 .FBbuttonsText {
     font-size: 18px;
     opacity: 0.8;
+    color: 'red !important'
 }
